fixed misaligned nav items

--- a/assets/style.css
+++ b/assets/style.css
@@ -227,13 +227,25 @@ header * {
   width: 70%;
   font-family: var(--doza-support);
   margin: 0;
+  display: flex;
+  justify-content: flex-end;
 }
-.navigation a {
+/* .navigation a {
   height: 100%;
   display: table;
   align-items: center;
   padding: 0px 20px;
   float: left;
+  text-decoration: none;
+  color: white;
+} */
+.navigation a {
+  height: 100%;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px 20px;
+  justify-content: center;
   text-decoration: none;
   color: white;
 }
@@ -2271,6 +2283,9 @@ input[type="email"] {
 
 /* Desktop monitors - 1280px to 1600px */
 @media screen and (min-width: 1280px) and (max-width: 1600px) {
+  .inner-header {
+    width: 80%;
+  }
   .hero-image {
     width: 100%;
   }
